--- a/apps/unovision-frontend/package.json
+++ b/apps/unovision-frontend/package.json
@@ -17,8 +17,9 @@
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
-    "@repo/tailwind-config": "workspace:*",
+    "@biomejs/biome": "2.3.4",
     "@eslint/js": "^9.36.0",
+    "@repo/tailwind-config": "workspace:*",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
