--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "with-tailwind",
+  "name": "aeme",
   "private": true,
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "check-types": "turbo run check-types",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format-and-lint:all": "biome check --write",
+    "format-and-lint:staged": "biome check --staged",
+    "format-and-lint:changed": "biome check --changed"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.4",
     "prettier": "^3.6.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "turbo": "^2.6.0"
