--- a/biome.json
+++ b/biome.json
@@ -8,18 +8,13 @@
   "files": {
     "ignoreUnknown": false,
     "includes": [
-      "src/**/*.js",
-      "src/**/*.ts",
-      "src/**/*.jsx",
-      "src/**/*.tsx",
-      "test/**/*.js",
-      "test/**/*.ts",
-      "test/**/*.jsx",
-      "test/**/*.tsx",
-      "!**/*.min.js",
-      "!./*.config.js",
-      "!./*.config.mjs",
-      "./index.ts"
+      "**",
+      "!!**/dist",
+      "!!**/build",
+      "!!**/node_modules",
+      "!!**/*.min.js",
+      "!!*.config.js",
+      "!!*.config.mjs"
     ]
   },
   "formatter": {
@@ -46,6 +41,11 @@
       "quoteStyle": "single",
       "semicolons": "always",
       "trailingCommas": "all"
+    }
+  },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
     }
   },
   "json": {
