--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "check-types": "turbo run check-types",
     "format-and-lint:all": "biome check --write",
     "format-and-lint:staged": "biome check --staged",
-    "format-and-lint:changed": "biome check --changed"
+    "format-and-lint:changed": "biome check --changed",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
+    "husky": "^9.1.7",
     "turbo": "^2.6.0"
   },
   "packageManager": "pnpm@10.19.0",
