--- a/package.json
+++ b/package.json
@@ -8,15 +8,29 @@
     "format-and-lint:all": "biome check --write",
     "format-and-lint:staged": "biome check --staged",
     "format-and-lint:changed": "biome check --changed",
-    "prepare": "husky"
+    "prepare": "husky",
+    "commit": "pnpm exec cz"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "commitizen": "^4.3.1",
+    "cz-customizable": "^7.5.1",
     "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "turbo": "^2.6.0"
   },
   "packageManager": "pnpm@10.19.0",
   "engines": {
     "node": ">=18"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
+  },
+  "lint-staged": {
+    "*": "pnpm test"
   }
 }
