--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format-and-lint:staged": "biome check --staged",
     "format-and-lint:changed": "biome check --changed",
     "prepare": "husky",
-    "commit": "pnpm exec cz"
+    "pre-commit-check": "pnpm check-types",
+    "commit": "pnpm pre-commit-check && pnpm exec cz"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
