--- a/apps/unovision-frontend/package.json
+++ b/apps/unovision-frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check-types": "tsc -b --noEmit"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
