test(monorepo): testing

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-customizable"
+      "path": "cz-customizable"
     }
   }
 }
