--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "aeme",
   "private": true,
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -16,8 +18,8 @@
     "@biomejs/biome": "2.3.4",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@commitlint/cz-commitlint": "^20.1.0",
     "commitizen": "^4.3.1",
-    "cz-customizable": "^7.5.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "turbo": "^2.6.0"
@@ -28,7 +30,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-customizable"
+      "path": "@commitlint/cz-commitlint"
     }
   }
 }
