--- a/apps/unovision-frontend/package.json
+++ b/apps/unovision-frontend/package.json
@@ -10,14 +10,14 @@
     "check-types": "tsc -b --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
+    "@aeme/ui": "workspace:*",
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
-    "@repo/tailwind-config": "workspace:*",
+    "@aeme/tailwind-config": "workspace:*",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
