--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ui",
+  "name": "@aeme/ui",
   "version": "0.0.0",
   "type": "module",
   "sideEffects": [
@@ -20,17 +20,29 @@
     "build:components": "tsc",
     "check-types": "tsc --noEmit",
     "dev:styles": "tailwindcss -i ./src/index.css -o ./dist/index.css --watch",
-    "dev:components": "tsc --watch"
+    "dev:components": "tsc --watch",
+    "dev:storybook": "storybook dev -p 6006 --no-open",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
     "react": "^19"
   },
   "devDependencies": {
-    "@repo/tailwind-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@aeme/tailwind-config": "workspace:*",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@tailwindcss/cli": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.17",
+    "postcss": "^8.5.3",
     "@types/react": "^19.1.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "storybook": "^8.6.14",
     "tailwindcss": "^4.1.5",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "vite": "^5.4.21"
   }
 }
