--- a/packages/ui/turbo.json
+++ b/packages/ui/turbo.json
@@ -1,23 +1,40 @@
 {
-  "extends": ["//"],
+  "extends": [
+    "//"
+  ],
   "tasks": {
     "build": {
-      "dependsOn": ["build:styles", "build:components"]
+      "dependsOn": [
+        "build:styles",
+        "build:components"
+      ]
     },
     "build:styles": {
-      "outputs": ["dist/**"]
+      "outputs": [
+        "dist/**"
+      ]
     },
     "build:components": {
-      "outputs": ["dist/**"]
+      "outputs": [
+        "dist/**"
+      ]
     },
     "dev": {
-      "with": ["dev:styles", "dev:components"]
+      "with": [
+        "dev:styles",
+        "dev:components",
+        "dev:storybook"
+      ]
     },
     "dev:styles": {
       "cache": false,
       "persistent": true
     },
     "dev:components": {
+      "cache": false,
+      "persistent": true
+    },
+    "dev:storybook": {
       "cache": false,
       "persistent": true
     }
