feat(ui): add the complete ui package

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -16,7 +16,11 @@
     "jsx": "react-jsx",
     "outDir": "dist",
     "module": "ESNext",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"],
   "exclude": ["dist", "build", "node_modules"]
