--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "tw-animate-css": "^1.3.6"
   }
 }
