--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,15 +17,38 @@
   "license": "MIT",
   "scripts": {
     "build:styles": "tailwindcss -i ./src/index.css -o ./dist/index.css",
-    "build:components": "tsc",
+    "build:components": "tsc && tsc-alias",
     "check-types": "tsc --noEmit",
     "dev:styles": "tailwindcss -i ./src/index.css -o ./dist/index.css --watch",
-    "dev:components": "tsc --watch",
+    "dev:components": "concurrently \"tsc --watch\" \"tsc-alias --watch\"",
     "dev:storybook": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build"
   },
   "peerDependencies": {
     "react": "^19"
+  },
+  "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.536.0",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
+    "react-day-picker": "^9.9.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@aeme/tailwind-config": "workspace:*",
@@ -37,11 +60,14 @@
     "@storybook/react-vite": "^8.6.14",
     "@tailwindcss/cli": "^4.1.5",
     "@tailwindcss/postcss": "^4.1.17",
-    "postcss": "^8.5.3",
+    "@types/node": "^24.6.0",
     "@types/react": "^19.1.0",
     "@vitejs/plugin-react": "^4.7.0",
+    "concurrently": "^9.2.1",
+    "postcss": "^8.5.3",
     "storybook": "^8.6.14",
     "tailwindcss": "^4.1.5",
+    "tsc-alias": "^1.8.16",
     "typescript": "5.9.2",
     "vite": "^5.4.21"
   }
