--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "scripts": {
     "build:styles": "tailwindcss -i ./src/index.css -o ./dist/index.css",
-    "build:components": "tsc && tsc-alias",
+    "build:components": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "check-types": "tsc --noEmit",
     "dev:styles": "tailwindcss -i ./src/index.css -o ./dist/index.css --watch",
     "dev:components": "concurrently \"tsc --watch\" \"tsc-alias --watch\"",
