--- a/apps/unovision-backend/supabase/config.toml
+++ b/apps/unovision-backend/supabase/config.toml
@@ -53,7 +53,24 @@ max_client_conn = 100
 enabled = true
 # Specifies an ordered list of schema files that describe your database.
 # Supports glob patterns relative to supabase directory: "./schemas/*.sql"
-schema_paths = []
+schema_paths = [
+  "./schemas/setup.sql",
+  "./schemas/enums.sql",
+  "./schemas/roles.sql",
+  "./schemas/vatCategories.sql",
+  "./schemas/organizations.sql",
+  "./schemas/profiles.sql",
+  "./schemas/profilesRoles.sql",
+  "./schemas/usersOrganizations.sql",
+  "./schemas/employees.sql",
+  "./schemas/doctors.sql",
+  "./schemas/patients.sql",
+  "./schemas/paymentMethods.sql",
+  "./schemas/expenseCategories.sql",
+  "./schemas/expenses.sql",
+  "./schemas/functions.sql",
+  "./schemas/*.sql",
+]
 
 [db.seed]
 # If enabled, seeds the database after migrations during a db reset.
