refactor(monorepo): change file names using kebab-case

--- a/apps/unovision-backend/supabase/config.toml
+++ b/apps/unovision-backend/supabase/config.toml
@@ -57,16 +57,16 @@ schema_paths = [
   "./schemas/setup.sql",
   "./schemas/enums.sql",
   "./schemas/roles.sql",
-  "./schemas/vatCategories.sql",
+  "./schemas/vat-categories.sql",
   "./schemas/profiles.sql",
   "./schemas/organizations.sql",
-  "./schemas/profilesRoles.sql",
-  "./schemas/usersOrganizations.sql",
+  "./schemas/profiles-roles.sql",
+  "./schemas/users-organizations.sql",
   "./schemas/employees.sql",
   "./schemas/doctors.sql",
   "./schemas/patients.sql",
-  "./schemas/paymentMethods.sql",
-  "./schemas/expenseCategories.sql",
+  "./schemas/payment-methods.sql",
+  "./schemas/expense-categories.sql",
   "./schemas/expenses.sql",
   "./schemas/rls-policies.sql",
   "./schemas/functions.sql",
