fix(monorepo): test ci

--- a/.github/workflows/apps-unovision-backend-CI.yaml
+++ b/.github/workflows/apps-unovision-backend-CI.yaml
@@ -31,26 +31,35 @@ jobs:
       - name: Start Supabase local development setup
         run: supabase db start
 
+      - name: Create types directory if it doesn't exist
+        run: mkdir -p supabase/types
+
+      - name: Generate current database types
+        run: supabase gen types typescript --local > supabase/types/database.types.generated.ts
+
       - name: Verify generated types are up to date
         run: |
-          # Genera los types desde la DB local (creada desde migraciones)
-          supabase gen types typescript --local > types.gen.ts
-          
-          # Compara ignorando espacios y cambios menores
-          if ! git diff --ignore-space-at-eol --ignore-all-space --exit-code supabase/types/database.types.ts types.gen.ts; then
+          # Compare the newly generated types with the committed version
+          if ! diff -u supabase/types/database.types.ts supabase/types/database.types.generated.ts; then
             echo "❌ Database types are out of date!"
             echo ""
-            echo "The generated TypeScript types don't match what's committed."
+            echo "The generated TypeScript types don't match what's committed in the repository."
+            echo "This usually happens when database schema changes haven't been reflected in the types file."
             echo ""
             echo "To fix this:"
-            echo "1. cd apps/unovision-backend"
-            echo "2. supabase db reset (to apply all migrations)"
-            echo "3. supabase gen types typescript --local > supabase/types/database.types.ts"
-            echo "4. git add supabase/types/database.types.ts"
-            echo "5. git commit -m 'Update database types'"
+            echo "1. Run locally in apps/unovision-backend: 'npx supabase db reset'"
+            echo "2. Generate new types: 'npx supabase gen types typescript --local > supabase/types/database.types.ts'"
+            echo "3. Commit the updated types file: 'git add . && git commit -m \"Update database types\"'"
+            echo "4. Push the changes: 'git push'"
             echo ""
             echo "Differences found:"
-            git diff --ignore-space-at-eol supabase/types/database.types.ts types.gen.ts
+            echo "====================="
+            diff -u supabase/types/database.types.ts supabase/types/database.types.generated.ts || true
+            echo "====================="
             exit 1
           fi
           echo "✅ Database types are up to date!"
+
+      - name: Clean up generated files
+        if: always()
+        run: rm -f supabase/types/database.types.generated.ts
