--- a/.github/workflows/apps-unovision-backend-CI.yaml
+++ b/.github/workflows/apps-unovision-backend-CI.yaml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Check if database schema changed
         run: |
-          # Check if there are any changes in schema files or migrations
-          if git diff --name-only HEAD~1 HEAD | grep -E "(supabase/migrations|supabase/schemas)" > /dev/null; then
+          # Check if there are any changes in schema files or migrations in the entire PR/push
+          if git diff --name-only origin/main...HEAD | grep -E "(supabase/migrations|supabase/schemas)" > /dev/null; then
             echo "🔍 Database schema changes detected, verifying types are up to date..."
             
             # Generate fresh types from current schema
@@ -52,7 +52,7 @@ jobs:
               echo "3. Commit: 'git add supabase/types/database.types.ts && git commit -m \"Update database types\" && git push'"
               echo ""
               echo "Schema changes found in:"
-              git diff --name-only HEAD~1 HEAD | grep -E "(supabase/migrations|supabase/schemas)" || true
+              git diff --name-only origin/main...HEAD | grep -E "(supabase/migrations|supabase/schemas)" || true
               exit 1
             else
               echo "✅ Database types are up to date with schema changes!"
