--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "prepare": "husky",
     "pre-commit-check": "pnpm check-types",
     "commit": "pnpm pre-commit-check && pnpm exec cz",
-    "backend:db-types": "cd apps/unovision-backend && node generate-types.mjs",
-    "backend:db-reset": "cd apps/unovision-backend && npx supabase db reset",
-    "backend:db-start": "cd apps/unovision-backend && npx supabase db start"
+    "backend:db-types": "cd apps/unovision-backend && node generate-types.mjs"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
