--- a/.github/workflows/apps-unovision-backend-TESTS-AND-DEPLOY.yaml
+++ b/.github/workflows/apps-unovision-backend-TESTS-AND-DEPLOY.yaml
@@ -1,4 +1,4 @@
-name: Unovision Backend CI
+name: Unovision Backend CI/CD
 
 on:
   push:
@@ -49,3 +49,27 @@ jobs:
             exit 1
           fi
           echo "✅ Database types are up to date!"
+
+  deploy:
+    # Only run on main branch pushes (not PRs) and after test job succeeds
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    needs: test
+    runs-on: ubuntu-latest
+
+    env:
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
+      SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: supabase/setup-cli@v1
+        with:
+          version: latest
+
+      - name: Link to Supabase project
+        run: supabase link --project-ref $SUPABASE_PROJECT_ID
+
+      - name: Deploy database migrations to production
+        run: supabase db push
