--- a/.github/workflows/apps-unovision-backend-TESTS-AND-DEPLOY-MIGRATIONS.yaml
+++ b/.github/workflows/apps-unovision-backend-TESTS-AND-DEPLOY-MIGRATIONS.yaml
@@ -18,7 +18,31 @@ defaults:
     working-directory: apps/unovision-backend
 
 jobs:
+  # Job to detect if database-related files changed
+  detect-db-changes:
+    runs-on: ubuntu-latest
+    outputs:
+      db-changed: ${{ steps.changes.outputs.db-changed }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Check for database changes
+        id: changes
+        run: |
+          if git diff --name-only HEAD~1 HEAD | grep -E "(supabase/migrations|supabase/schemas|supabase/seed)" > /dev/null; then
+            echo "db-changed=true" >> $GITHUB_OUTPUT
+            echo "🔍 Database changes detected:"
+            git diff --name-only HEAD~1 HEAD | grep -E "(supabase/migrations|supabase/schemas|supabase/seed)" || true
+          else
+            echo "db-changed=false" >> $GITHUB_OUTPUT
+            echo "ℹ️ No database changes detected. Skipping database jobs."
+          fi
+
   test:
+    needs: detect-db-changes
+    if: needs.detect-db-changes.outputs.db-changed == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -51,9 +75,9 @@ jobs:
           echo "✅ Database types are up to date!"
 
   deploy:
-    # Only run on main branch pushes (not PRs) and after test job succeeds
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: test
+    # Only run on main branch pushes (not PRs), after test job succeeds, and when DB changed
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && needs.detect-db-changes.outputs.db-changed == 'true'
+    needs: [detect-db-changes, test]
     runs-on: ubuntu-latest
 
     env:
@@ -68,21 +92,8 @@ jobs:
         with:
           version: latest
 
-      - name: Check if database files changed
-        id: db-check
-        run: |
-          if git diff --name-only HEAD~1 HEAD | grep -E "(supabase/migrations|supabase/schemas|supabase/seed\.sql|supabase/config\.toml)" > /dev/null; then
-            echo "has-db-changes=true" >> $GITHUB_OUTPUT
-            echo "🔍 Database changes detected - deploying..."
-          else
-            echo "has-db-changes=false" >> $GITHUB_OUTPUT
-            echo "ℹ️ No database changes detected - skipping deployment"
-          fi
-
       - name: Link to Supabase project
-        if: steps.db-check.outputs.has-db-changes == 'true'
         run: supabase link --project-ref $SUPABASE_PROJECT_ID
 
       - name: Deploy database migrations to production
-        if: steps.db-check.outputs.has-db-changes == 'true'
         run: supabase db push
