fix(monorepo): asd

--- a/.github/workflows/apps-unovision-backend-DEPLOY-FUNCTIONS.yaml
+++ b/.github/workflows/apps-unovision-backend-DEPLOY-FUNCTIONS.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'apps/unovision-backend/supabase/functions/**'
+      - 'apps/unovision-backend/**'
   workflow_dispatch:
 
 defaults:
