--- a/apps/unovision-backend/supabase/config.toml
+++ b/apps/unovision-backend/supabase/config.toml
@@ -384,3 +384,14 @@ entrypoint = "./functions/test_new_function/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/test_new_function/*.html" ]
+
+[functions.my-test-2]
+enabled = true
+verify_jwt = true
+import_map = "./functions/my-test-2/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/my-test-2/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/my-test-2/*.html" ]
