fix(monorepo): test

--- a/apps/unovision-backend/supabase/config.toml
+++ b/apps/unovision-backend/supabase/config.toml
@@ -395,3 +395,14 @@ entrypoint = "./functions/my-test-2/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/my-test-2/*.html" ]
+
+[functions.test-fc-3]
+enabled = true
+verify_jwt = true
+import_map = "./functions/test-fc-3/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/test-fc-3/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/test-fc-3/*.html" ]
