feat(monorepo): asd

--- a/packages/supabase-client/package.json
+++ b/packages/supabase-client/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "scripts": {
+    "backend:db-types": "node src/generate-types.mjs"
+  },
   "exports": {
     ".": {
       "import": "./src/index.ts",
