--- a/.github/workflows/apps-unovision-backend-TESTS-AND-DEPLOY-MIGRATIONS.yaml
+++ b/.github/workflows/apps-unovision-backend-TESTS-AND-DEPLOY-MIGRATIONS.yaml
@@ -9,7 +9,7 @@ on:
       - 'apps/unovision-backend/supabase/schemas/**'
       - 'apps/unovision-backend/supabase/seed.sql'
       - 'apps/unovision-backend/supabase/config.toml'
-      - 'apps/unovision-backend/generate-types.mjs'
+      - 'packages/supabase-client/src/generate-types.mjs'
       - '.github/workflows/apps-unovision-backend-TESTS-AND-DEPLOY-MIGRATIONS.yaml'
   pull_request:
     branches:
@@ -19,36 +19,14 @@ on:
       - 'apps/unovision-backend/supabase/schemas/**'
       - 'apps/unovision-backend/supabase/seed.sql'
       - 'apps/unovision-backend/supabase/config.toml'
-      - 'apps/unovision-backend/generate-types.mjs'
+      - 'packages/supabase-client/src/generate-types.mjs'
       - '.github/workflows/apps-unovision-backend-TESTS-AND-DEPLOY-MIGRATIONS.yaml'
   workflow_dispatch:
 
-defaults:
-  run:
-    working-directory: apps/unovision-backend
+# ...existing code...
 
 jobs:
-  # Job to detect if database-related files changed
-  detect-db-changes:
-    runs-on: ubuntu-latest
-    outputs:
-      db-changed: ${{ steps.changes.outputs.db-changed }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-
-      - name: Check for database changes
-        id: changes
-        run: |
-          if git diff --name-only HEAD~1 HEAD | grep -E "(supabase/migrations|supabase/schemas|supabase/seed)" > /dev/null; then
-            echo "db-changed=true" >> $GITHUB_OUTPUT
-            echo "🔍 Database changes detected:"
-            git diff --name-only HEAD~1 HEAD | grep -E "(supabase/migrations|supabase/schemas|supabase/seed)" || true
-          else
-            echo "db-changed=false" >> $GITHUB_OUTPUT
-            echo "ℹ️ No database changes detected. Skipping database jobs."
-          fi
+  # ...existing code...
 
   test:
     needs: detect-db-changes
@@ -71,11 +49,14 @@ jobs:
       - name: Start Supabase local development setup
         if: needs.detect-db-changes.outputs.db-changed == 'true'
         run: supabase db start
+        working-directory: apps/unovision-backend
 
       - name: Verify generated types are checked in
         if: needs.detect-db-changes.outputs.db-changed == 'true'
         run: |
-          node generate-types.mjs
+          # Execute the generate-types script from the correct location
+          node ../../packages/supabase-client/src/generate-types.mjs
+          # Tengo que cambiar esto "supabase/types/database.types.ts" en los 3 lados de este script, pq ahora está en otro package.
           if ! git diff --ignore-space-at-eol --exit-code --quiet supabase/types/database.types.ts; then
             echo "❌ Database types are out of date!"
             echo ""
@@ -83,7 +64,7 @@ jobs:
             echo ""
             echo "To fix this:"
             echo "1. Run locally: 'npx supabase db reset'"
-            echo "2. Generate types: 'npx supabase gen types typescript --local > supabase/types/database.types.ts'"
+            echo "2. Generate types: 'node packages/supabase-client/src/generate-types.mjs'"
             echo "3. Commit: 'git add supabase/types/database.types.ts && git commit -m \"Update database types\" && git push'"
             echo ""
             echo "Detected changes:"
@@ -91,27 +72,6 @@ jobs:
             exit 1
           fi
           echo "✅ Database types are up to date!"
+        working-directory: apps/unovision-backend
 
-  deploy:
-    # Only run on main branch pushes (not PRs), after test job succeeds, and when DB changed
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && needs.detect-db-changes.outputs.db-changed == 'true'
-    needs: [detect-db-changes, test]
-    runs-on: ubuntu-latest
-
-    env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
-      SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: supabase/setup-cli@v1
-        with:
-          version: latest
-
-      - name: Link to Supabase project
-        run: supabase link --project-ref $SUPABASE_PROJECT_ID
-
-      - name: Deploy database migrations to production
-        run: supabase db push
+  # ...existing code...
