--- a/apps/unovision-frontend/package.json
+++ b/apps/unovision-frontend/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-table": "^8.21.3",
     "@uidotdev/usehooks": "^2.4.1",
@@ -25,6 +24,7 @@
     "zod": "^4.0.14",
     "zustand": "^5.0.7",
     "@aeme/ui": "workspace:*",
+    "@aeme/supabase-client": "workspace:*",
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
