--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky",
     "pre-commit-check": "pnpm check-types",
     "commit": "pnpm pre-commit-check && pnpm exec cz",
-    "backend:db-types": "cd apps/unovision-backend && node generate-types.mjs"
+    "backend:db-types": "cd packages/supabase-client && node src/generate-types.mjs"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
